# discord-rs

./: Cargo.toml
src/: connection.rs  model.rs
