[package]
name = "discord"
version = "0.6.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Client library for the Discord API"
readme = "README.md"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/SpaceManiac/discord-rs"
documentation = "http://wombat.platymuus.com/rustdoc/discord_0.6.0/"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide"]

[dependencies]
hyper = "0.9"
serde_json = "0.8"
bitflags = "0.7"
byteorder = "0.5"
time = "0.1"
log = "0.3"
base64-rs = "0.1.1"
flate2 = "0.2.14"
opus = { version = "0.1", optional = true }

[dependencies.websocket]
# We need the set_nonblocking() function, so we need this unreleased commit
git = "https://github.com/cyderize/rust-websocket"
rev = "105d8b80b56f516ab98c50d9ccdd3c923b44cdff"

[dependencies.sodiumoxide]
version = "0.0.12"
default-features = false
optional = true

[dependencies.multipart]
version = "0.8"
default-features = false
features = ["hyper", "client"]
